remise en forme ecran. introduction note archers. nouvelle table note_archer

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,31 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+
     package="com.herault.comptecible">
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
 
-
-
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher_foreground_v36"
         android:label="@string/app_name"
+        android:requestLegacyExternalStorage="true"
         android:roundIcon="@drawable/ic_launcher_foreground_v36"
         android:supportsRtl="true"
-        android:requestLegacyExternalStorage="true"
         android:theme="@style/AppTheme">
+
         <activity
             android:name=".Activity_MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".EditNoteActivity"
+            android:label="CompteCible"
+            android:theme="@style/AppTheme.NoActionBar"/>
         <activity
             android:name=".Activity_config_round"
             android:label="CompteCible"
@@ -46,6 +50,11 @@
             android:name=".Activity_apropos"
             android:label="CompteCible"
             android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".Activity_archer"
+            android:label="CompteCible"
+            android:theme="@style/AppTheme.NoActionBar" />
+
     </application>
 
 </manifest>
