--- a/build.gradle
+++ b/build.gradle
@@ -3,14 +3,14 @@ ext {
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    
     repositories {
+        mavenCentral()
         google()
-        jcenter()
-        
+        //jcenter()
     }
+
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.2.2'
+        classpath 'com.android.tools.build:gradle:7.0.3'
 
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -21,7 +21,7 @@ buildscript {
 allprojects {
     repositories {
         google()
-        jcenter()
+       // jcenter()
         
     }
 }
