--- a/build.gradle
+++ b/build.gradle
@@ -5,8 +5,9 @@ ext {
 buildscript {
     repositories {
         mavenCentral()
-        google()
         //jcenter()
+        google()
+
     }
 
     dependencies {
@@ -20,8 +21,10 @@ buildscript {
 
 allprojects {
     repositories {
+
+            maven { url 'https://repo1.maven.org/maven2' }
+
         google()
-       // jcenter()
         
     }
 }
