Correction android sequence. Sort archer in round

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,10 +8,15 @@ android {
         applicationId "com.herault.comptecible"
         minSdkVersion 19
         targetSdkVersion 31
-        versionCode 26
-        versionName "1.6.1"
+        versionCode 27
+        versionName "1.6.2"
 
         testInstrumentationRunner releaseApplicationIdSuffix
+        allprojects {
+            tasks.withType(JavaCompile) {
+                options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation"
+            }
+        }
     }
 
     buildTypes {
