--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" >
 
-    >
-
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"
- />
-
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        android:maxSdkVersion="28" />
+    <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" />
 
     <application
-
+        android:installLocation="preferExternal"
         android:icon="@drawable/ic_launcher_foreground_v36"
         android:label="@string/app_name"
         android:requestLegacyExternalStorage="true"
@@ -48,7 +47,8 @@
             android:name=".Activity_resultat_image"
             android:parentActivityName=".Activity_MainActivity"
             android:label="CompteCible"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:theme="@style/AppTheme.NoActionBar"
+            />
         <activity
             android:name=".Activity_apropos"
             android:parentActivityName=".Activity_MainActivity"
@@ -65,6 +65,16 @@
             android:label="CompteCible"
             android:theme="@style/AppTheme.NoActionBar"/>
 
+
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="${applicationId}.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/provider_path"/>
+        </provider>
     </application>
 
 </manifest>
